// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProgressBar expect to render failed bar without error 1`] = `
<DocumentFragment>
  <div
    class="pf-v5-c-progress pf-m-danger wizard-progress-bar"
    id="finished-create-policy"
  >
    <div
      aria-hidden="true"
      class="pf-v5-c-progress__description"
      id="finished-create-policy-description"
    >
      Error
    </div>
    <div
      aria-hidden="true"
      class="pf-v5-c-progress__status"
    >
      <span
        class="pf-v5-c-progress__measure"
      >
        50%
      </span>
      <span
        class="pf-v5-c-progress__status-icon"
      >
        <svg
          aria-hidden="true"
          class="pf-v5-svg"
          fill="currentColor"
          height="1em"
          role="img"
          viewBox="0 0 512 512"
          width="1em"
        >
          <path
            d="M256 8C119 8 8 119 8 256s111 248 248 248 248-111 248-248S393 8 256 8zm121.6 313.1c4.7 4.7 4.7 12.3 0 17L338 377.6c-4.7 4.7-12.3 4.7-17 0L256 312l-65.1 65.6c-4.7 4.7-12.3 4.7-17 0L134.4 338c-4.7-4.7-4.7-12.3 0-17l65.6-65-65.6-65.1c-4.7-4.7-4.7-12.3 0-17l39.6-39.6c4.7-4.7 12.3-4.7 17 0l65 65.7 65.1-65.6c4.7-4.7 12.3-4.7 17 0l39.6 39.6c4.7 4.7 4.7 12.3 0 17L312 256l65.6 65.1z"
          />
        </svg>
      </span>
    </div>
    <div
      aria-labelledby="finished-create-policy-description"
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="50"
      class="pf-v5-c-progress__bar"
      role="progressbar"
    >
      <div
        class="pf-v5-c-progress__indicator"
        style="width: 50%;"
      >
        <span
          class="pf-v5-c-progress__measure"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`ProgressBar expect to render progress bar without error 1`] = `
<DocumentFragment>
  <div
    class="pf-v5-c-progress wizard-progress-bar"
    id="finished-create-policy"
  >
    <div
      aria-hidden="true"
      class="pf-v5-c-progress__description"
      id="finished-create-policy-description"
    >
      Progress
    </div>
    <div
      aria-hidden="true"
      class="pf-v5-c-progress__status"
    >
      <span
        class="pf-v5-c-progress__measure"
      >
        0%
      </span>
    </div>
    <div
      aria-labelledby="finished-create-policy-description"
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="0"
      class="pf-v5-c-progress__bar"
      role="progressbar"
    >
      <div
        class="pf-v5-c-progress__indicator"
        style="width: 0%;"
      >
        <span
          class="pf-v5-c-progress__measure"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`ProgressBar expect to render success bar without error 1`] = `
<DocumentFragment>
  <div
    class="pf-v5-c-progress pf-m-success wizard-progress-bar"
    id="finished-create-policy"
  >
    <div
      aria-hidden="true"
      class="pf-v5-c-progress__description"
      id="finished-create-policy-description"
    >
      Success
    </div>
    <div
      aria-hidden="true"
      class="pf-v5-c-progress__status"
    >
      <span
        class="pf-v5-c-progress__measure"
      >
        100%
      </span>
      <span
        class="pf-v5-c-progress__status-icon"
      >
        <svg
          aria-hidden="true"
          class="pf-v5-svg"
          fill="currentColor"
          height="1em"
          role="img"
          viewBox="0 0 512 512"
          width="1em"
        >
          <path
            d="M504 256c0 136.967-111.033 248-248 248S8 392.967 8 256 119.033 8 256 8s248 111.033 248 248zM227.314 387.314l184-184c6.248-6.248 6.248-16.379 0-22.627l-22.627-22.627c-6.248-6.249-16.379-6.249-22.628 0L216 308.118l-70.059-70.059c-6.248-6.248-16.379-6.248-22.628 0l-22.627 22.627c-6.248 6.248-6.248 16.379 0 22.627l104 104c6.249 6.249 16.379 6.249 22.628.001z"
          />
        </svg>
      </span>
    </div>
    <div
      aria-labelledby="finished-create-policy-description"
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="100"
      class="pf-v5-c-progress__bar"
      role="progressbar"
    >
      <div
        class="pf-v5-c-progress__indicator"
        style="width: 100%;"
      >
        <span
          class="pf-v5-c-progress__measure"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;
